# qweb

./: .dockerignore  Dockerfile  README.md  pyproject.toml  qweb.conf.example
qweb/: __init__.py  __main__.py  api.py  auth.py  config.py  directory.py  logger.py  sge.py
src/: main.py
tests/: __init__.py  test.conf  test_qweb.py
tests/resources/: SGE.md
