[build-system]
requires = ["setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qweb"
dynamic = ["version"]
description = "Sun Grid Engine Web Interface - RESTful API for SGE job management"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Saud Zahir", email = "m.saud.zahir@gmail.com"},
]
maintainers = [
    {name = "Saud Zahir", email = "m.saud.zahir@gmail.com"},
    {name = "M Laraib Ali", email = "laraibg786@outlook.com"},
]
keywords = ["hpc", "gridengine", "sge", "sun", "oracle", "job", "scheduler", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "xmltodict>=0.13.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-limiter>=4.0.0",
    "annotated-doc==0.0.4",
    "anyio==4.13.0",
    "fastapi==0.136.1",
    "h11==0.16.0",
    "idna==3.13",
    "starlette==1.0.0",
    "uvicorn==0.46.0",
    "limits>=3.0.0",
    "rich>=13.0.0",
    "pyfiglet>=0.8.0",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"}
]
docs = [
    "zensical>=0.0.23",
    "mkdocstrings[python]>=1.0.4"
]
lint = [
    "ruff==0.15.*",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6.1",
]

[project.scripts]
qweb = "qweb.api:main"

[tool.setuptools_scm]

[tool.ruff]
line-length = 80
indent-width = 4
preview = true

# Output serialization format for violations. The default serialization
# format is "full" [env: RUFF_OUTPUT_FORMAT=] [possible values:
# concise, full, json, json-lines, junit, grouped, github, gitlab,
# pylint, rdjson, azure, sarif]
output-format = "grouped"

[tool.ruff.lint]
isort.lines-after-imports = 2
isort.split-on-trailing-comma = false

select = [
    "ANN", # flake8-annotations (required strict type annotations for public functions)
    "S",   # flake8-bandit (checks basic security issues in code)
    "BLE", # flake8-blind-except (checks the except blocks that do not specify exception)
    "FBT", # flake8-boolean-trap (ensure that boolean args can be used with kw only)
    "E",   # pycodestyle errors (PEP 8 style guide violations)
    "W",   # pycodestyle warnings (e.g., extra spaces, indentation issues)
    "DOC", # pydoclint issues (e.g., extra or missing return, yield, warnings)
    "A",   # flake8-buitins (check variable and function names to not shadow builtins)
    "N",   # Naming convention checks (e.g., PEP 8 variable and function names)
    "F",   # Pyflakes errors (e.g., unused imports, undefined variables)
    "I",   # isort (Ensures imports are sorted properly)
    "B",   # flake8-bugbear (Detects likely bugs and bad practices)
    "TID", # flake8-tidy-imports (Checks for banned or misplaced imports)
    "UP",  # pyupgrade (Automatically updates old Python syntax)
    "YTT", # flake8-2020 (Detects outdated Python 2/3 compatibility issues)
    "FLY", # flynt (Converts old-style string formatting to f-strings)
    "PIE", # flake8-pie
    "PL",  # pylint
    "RUF", # Ruff-specific rules (Additional optimizations and best practices)
]

ignore = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["RUF067"]
"tests/*.py" = []

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "--doctest-modules -v"
